feat: [F5] - Catálogos do sistema
